; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vmd/extr_vmd.c_vmd_adjust_resource.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vmd/extr_vmd.c_vmd_adjust_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

@PCI_RES_BUS = common dso_local global i32 0, align 4
@PCI_DOMAINMAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, %struct.resource*, i32, i32)* @vmd_adjust_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vmd_adjust_resource(i32 %0, i32 %1, i32 %2, %struct.resource* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.resource*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.resource*, align 8
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store %struct.resource* %3, %struct.resource** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %15 = load %struct.resource*, %struct.resource** %11, align 8
  store %struct.resource* %15, %struct.resource** %14, align 8
  %16 = load i32, i32* %10, align 4
  %17 = load i32, i32* @PCI_RES_BUS, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %29

19:                                               ; preds = %6
  %20 = load i64, i64* @PCI_DOMAINMAX, align 8
  %21 = load i32, i32* %8, align 4
  %22 = call i64 @device_get_unit(i32 %21)
  %23 = sub nsw i64 %20, %22
  %24 = load i32, i32* %9, align 4
  %25 = load %struct.resource*, %struct.resource** %14, align 8
  %26 = load i32, i32* %12, align 4
  %27 = load i32, i32* %13, align 4
  %28 = call i32 @pci_domain_adjust_bus(i64 %23, i32 %24, %struct.resource* %25, i32 %26, i32 %27)
  store i32 %28, i32* %7, align 4
  br label %37

29:                                               ; preds = %6
  %30 = load i32, i32* %8, align 4
  %31 = load i32, i32* %9, align 4
  %32 = load i32, i32* %10, align 4
  %33 = load %struct.resource*, %struct.resource** %14, align 8
  %34 = load i32, i32* %12, align 4
  %35 = load i32, i32* %13, align 4
  %36 = call i32 @pcib_adjust_resource(i32 %30, i32 %31, i32 %32, %struct.resource* %33, i32 %34, i32 %35)
  store i32 %36, i32* %7, align 4
  br label %37

37:                                               ; preds = %29, %19
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}

declare dso_local i32 @pci_domain_adjust_bus(i64, i32, %struct.resource*, i32, i32) #1

declare dso_local i64 @device_get_unit(i32) #1

declare dso_local i32 @pcib_adjust_resource(i32, i32, i32, %struct.resource*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
